# jsAgent

./: .gitignore  README.md  pyproject.toml
har_agent/: __init__.py  cli.py  config.py
har_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
har_agent/analysis/: __init__.py  claims.py  confidence.py  gaps.py  helpers.py  pipeline.py
har_agent/graph/: __init__.py  builder.py  routes.py  state.py
har_agent/hooks/: __init__.py  analysis_explainer.py  base.py  generation_logic_reasoner.py  registry.py  semantic_goal_refiner.py
har_agent/inference/: __init__.py  correlations.py  encodings.py  generation_candidates.py  heuristics.py
har_agent/intents/: __init__.py  goal_resolver.py
har_agent/lineage/: __init__.py  cookie_lineage.py  field_lineage.py
har_agent/models/: __init__.py  agent_state.py  findings.py  har.py  intent.py  normalized.py  report.py
har_agent/nodes/: __init__.py  auto_discovery.py  finalize.py  health_check.py  load_har.py  match_requests.py  normalize_har.py  parse_goal.py  resolve_cookie_target.py  resolve_field_target.py  resolve_request_target.py  review_cookie_evidence.py  review_field_evidence.py  run_cookie_analysis.py  run_field_analysis.py
tests/: test_cli.py  test_cookie_lineage.py  test_field_lineage.py  test_goal_resolver.py  test_graph_builder.py  test_graph_cookie_branch.py  test_graph_fallback.py  test_graph_field_branch.py  test_graph_parse_goal.py  test_graph_routes.py  test_har_loader.py  test_hooks.py  test_inference.py  test_normalizer.py  test_selectors.py
tests/fixtures/: goal.txt  (+8 more)
(+12 files in other folders)
